--- a/CryptoSwift.xcodeproj/xcshareddata/xcschemes/CryptoSwift watchOS.xcscheme
+++ b/CryptoSwift.xcodeproj/xcshareddata/xcschemes/CryptoSwift watchOS.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "36F7129C1F8B765F00F60713"
-               BuildableName = "CryptoSwift watchOS.framework"
+               BuildableName = "CryptoSwift.framework"
                BlueprintName = "CryptoSwift watchOS"
                ReferencedContainer = "container:CryptoSwift.xcodeproj">
             </BuildableReference>
@@ -48,7 +48,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "36F7129C1F8B765F00F60713"
-            BuildableName = "CryptoSwift watchOS.framework"
+            BuildableName = "CryptoSwift.framework"
             BlueprintName = "CryptoSwift watchOS"
             ReferencedContainer = "container:CryptoSwift.xcodeproj">
          </BuildableReference>
@@ -66,7 +66,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "36F7129C1F8B765F00F60713"
-            BuildableName = "CryptoSwift watchOS.framework"
+            BuildableName = "CryptoSwift.framework"
             BlueprintName = "CryptoSwift watchOS"
             ReferencedContainer = "container:CryptoSwift.xcodeproj">
          </BuildableReference>
